--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Build and Release Folders
+v# Build and Release Folders
 bin/
 bin-debug/
 bin-release/
@@ -7,6 +7,7 @@ bin-release/
 
 # Misc files
 .DS_Store
+assets/images/.DS_Store
 
 # Other files and folders
 .settings/
